Fixed header and horizontal scroll.

--- a/src/template/css/app.css
+++ b/src/template/css/app.css
@@ -8451,10 +8451,11 @@ input[name="quantity"]::placeholder {
 .custom-checkbox .custom-control-input:checked ~ .custom-control-label:after {
   top: 2px; }
 
-table.table-my-fare-card-list {
-  width: 100%; }
-  table.table-my-fare-card-list thead .th-lg {
-    min-width: 12rem; }
+table#myFareCardList thead th:nth-of-type(3) {
+  min-width: 120px !important; }
+
+table#myFareCardList thead th:nth-of-type(4) {
+  min-width: 120px !important; }
 
 .tooltip {
   border: 2px solid #fff; }
