--- a/src/template/scss/_tables.scss
+++ b/src/template/scss/_tables.scss
@@ -1,10 +1,32 @@
 table {
   &.table-my-fare-card-list {
-    width: 100%;
-
     thead {
       .th-lg {
-        min-width: 12rem;
+        //min-width: 12rem;
+      }
+    }
+  }
+
+  &#myFareCardList {
+    thead {
+      th {
+        // &:nth-of-type(1) {
+        //   width: auto !important;
+        //   min-width: 128px !important;
+        //   //width: 128px !important;
+        // }
+        // &:nth-of-type(2) {
+        //   min-width: 120px !important;
+        // }
+        &:nth-of-type(3) {
+          min-width: 120px !important;
+        }
+        &:nth-of-type(4) {
+          min-width: 120px !important;
+        }
+        // &:nth-of-type(5) {
+        //   min-width: 150px !important;
+        // }
       }
     }
   }
